# background-effects-fpga

./: CMakeLists.txt  README.md
x86/sim/: CMakeLists.txt  reference.webm
x86/sim-rs/: .gitignore  Cargo.toml
x86/sim-rs/src/: cli.rs  main.rs
x86/sim-rs/src/io/: mod.rs  write.rs
x86/sim-rs/src/processing/: pipeline.rs
x86/sim/inc/: app.h  cli.h  image_buffer.h  mp4.h  webcam.h
x86/sim/src/: app.c  cli.c  image_buffer.c  main.c  mp4.c  test.c
